CRUD Lista-Cratas

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.6.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>test-mtg</groupId>
+	<artifactId>api-mtg</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>API-MTG</name>
-	<description>Criação CRUD MTG</description>
+	<name>api-mtg</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
